<resources>
    <!-- Generel strings -->
    <string name="app_name">Ordsomegram</string>
    <string name="title_request">Forespørgsel</string>
    <string name="title_answered_requests">Svar</string>
    <string name="title_send_answers">Besvar</string>

    <!-- Generel placeholders throughout -->
    <string name="placeholder_original_text">static: Portez ce vieux whisky au juge blond qui fume.</string>
    <string name="placeholder_translated_text">static: Bring denne gamle whisky til den blonde dommer som ryger.
    </string>

    <!-- Layout: fragment_new_requestuest.xml -->
    <string name="request_fragment_headline">Hvad skal du have oversat?</string>
    <string name="request_fragment_button_text">Send</string>

    <!-- Layout: fragment_answersdetail.xml-->
    <string name="answer_fragment_button_text">send forslag</string>

    <!-- Layout: fragment_my_request_detail.xmll -->
    <string name="answered_original_textview">Originalteksten er på: %1$s</string>
    <string name="answered_translated_textview">Forslag er oversat til: %1$s</string>

    <!-- Layout: fragment_my_request_item.xml.xml
    Also uses "answered_target_language_text" and "answered_source_language_text" as placeholders
        -->
    <string name="reqitem_id_textview">4</string>
    <string name="lang_to_lang">%1$s til %2$s</string>
    <string name="request_source_language_textbox">Kildesprog:</string>
    <string name="request_suggested_language_target_text_textbox">Målsprog:</string>
    <string name="request_suggested_language_target_text">placeholder languageTarget</string>
    <string name="srclang_to_tgtlang">Fransk til Dansk</string>
    <string name="placeholder_source_language">Fransk</string>
    <string name="placeholder_target_language">Dansk</string>
    <string name="answered_no_of_answers">Antal oversættelser: %1$s</string>
    <string name="my_request">Min forspørgsel</string>
    <string name="my_requests">Svar på mine forespørgsler</string>
    <string name="request_detail">Min forespørgsel</string>
    <string name="answers_fragment_title">Besvar forespørgsler</string>
    <string name="title_activity_settings">Indstillinger</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_settings">indstillinger</string>
    <string name="answer_down_vote_text">down vote</string>
    <string name="answer_up_vote_text">up vote</string>

</resources>
