<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.RequestAnswerFragment"
                                                   android:id="@+id/frameLayout3">
    <TextView
            android:text="@string/placeholder_original_text"
            android:id="@+id/answered_original_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="8dp"

            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" app:layout_constraintTop_toBottomOf="@+id/answered_original_textview"/>
    <EditText
            android:text="@string/placeholder_translated_text"
            android:id="@+id/answered_translated_text"
            app:layout_constraintTop_toBottomOf="@+id/answered_translated_textview"

            android:layout_width="0dp"
            android:layout_height="511dp"
            android:textSize="24sp"
            android:layout_marginTop="12dp"

            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:imeOptions="actionDone"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/answer_button" android:inputType="textMultiLine"/>
    <TextView
            android:text="@string/answered_original_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"
            android:id="@+id/answered_original_textview"/>
    <TextView
            android:text="@string/answered_translated_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:id="@+id/answered_translated_textview"
            app:layout_constraintTop_toBottomOf="@+id/answered_no_of_answers" android:layout_marginTop="16dp"/>
    <Button
            android:id="@+id/answer_button"
            android:text="@string/answer_fragment_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/answered_no_of_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answered_no_of_answers"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/answered_original_text"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toTopOf="@+id/answered_translated_textview"
            android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>