<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/itemGridLayout">
    <!-- Text from original request -->
    <TextView
            android:id="@+id/original_text"
            android:layout_width="0dp"
            android:layout_gravity="fill"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_original_text"
            android:textAppearance="?attr/textAppearanceListItem"
            tools:clickable="false"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/no_of_answers"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            android:layout_row="0" android:layout_column="1"/>

    <!-- number of Answers -->
    <TextView
            android:id="@+id/no_of_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reqitem_id_textview"
            android:textAppearance="?attr/textAppearanceListItem"
            android:background="@drawable/rounded_corner"
            android:padding="10dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_column="0"/>

    <!-- text that indicated source to target language -->
    <TextView
            android:id="@+id/source_to_target_language_textview"
            android:text="@string/srclang_to_tgtlang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintTop_toBottomOf="@+id/original_text"
    android:layout_row="1" android:layout_column="1"
    />
</GridLayout>
